[package]
name = "ens160"
version = "0.3.0"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>"]
repository = "https://github.com/teamplayer3/ens160.git"
description = "ENS160 driver implementation"
keywords = ["embedded", "ens160", "iot", "embedded-hal-driver", "co2-voc"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
embedded-hal = "1.0.0-alpha.10"
bitfield = "0.14.0"
