[package]
name = "ens160"
version = "0.4.1"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>"]
repository = "https://github.com/teamplayer3/ens160.git"
description = "ENS160 driver implementation"
keywords = ["embedded", "ens160", "iot", "embedded-hal-driver", "co2-voc"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["std"]
std = []
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = "1.0.0-rc.3"
embedded-hal-async = { version = "=1.0.0-rc.3", optional = true }
bitfield = "0.14.0"
maybe-async-cfg = "0.2.3"
